Update hw7 info

--- a/HW7/hw7.tex
+++ b/HW7/hw7.tex
@@ -108,8 +108,8 @@ preheadhook={\begin{mdframed}[style=myframedstyle]},
 %%%%%%%%%%%%%%%%%%%%
 %% Put your information here %%
 %%%%%%%%%%%%%%%%%%%
-\newcommand{\name}{\text{San Zhang}}  	          			%%% FILL IN YOUR NAME HERE
-\newcommand{\id}{\text{PBXXXXXXXX}}		       			%%% FILL IN YOUR ID HERE
+\newcommand{\name}{\text{Jiahuan Yu}}  	          			%%% FILL IN YOUR NAME HERE
+\newcommand{\id}{\text{PB17121687}}		       			%%% FILL IN YOUR ID HERE
 %%%%%%%%%%%%%%%%%%%%
 %% End of the student's info %%
 %%%%%%%%%%%%%%%%%%%
